--- a/index.html
+++ b/index.html
@@ -355,11 +355,10 @@ function rankPokerHand(cs, ss) {
               <tr>
                 <td>A♠</td>
                 <td>
-                  <code
-                    >00000000000000000<span
-                      class="bg-amber-400 text-gray-900 font-semibold"
+                  <code class="text-emerald-400"
+                    >00000000000000000<span class="bg-amber-400 text-gray-900"
                       >0100</span
-                    >0000000<span class="text-emerald-400 font-semibold"
+                    >0000000<span class="bg-blue-400 text-gray-900"
                       >0001</span
                     ></code
                   >
@@ -375,11 +374,10 @@ function rankPokerHand(cs, ss) {
               <tr>
                 <td>K♣</td>
                 <td>
-                  <code
-                    >00000000000000000<span
-                      class="bg-amber-400 text-gray-900 font-semibold"
+                  <code class="text-emerald-400"
+                    >00000000000000000<span class="bg-amber-400 text-gray-900"
                       >0010</span
-                    >0000000<span class="text-emerald-400 font-semibold"
+                    >0000000<span class="bg-blue-400 text-gray-900"
                       >0010</span
                     ></code
                   >
@@ -394,11 +392,10 @@ function rankPokerHand(cs, ss) {
               <tr>
                 <td>Q♥</td>
                 <td>
-                  <code
-                    >00000000000000000<span
-                      class="bg-amber-400 text-gray-900 font-semibold"
+                  <code class="text-emerald-400"
+                    >00000000000000000<span class="bg-amber-400 text-gray-900"
                       >0001</span
-                    >0000000<span class="text-emerald-400 font-semibold"
+                    >0000000<span class="bg-blue-400 text-gray-900"
                       >0100</span
                     ></code
                   >
@@ -413,11 +410,11 @@ function rankPokerHand(cs, ss) {
               <tr>
                 <td>J♦</td>
                 <td>
-                  <code
-                    >00000000000000000<span
-                      class="bg-amber-400 text-gray-900 font-semibold"
-                      >0000</span
-                    >1000000<span class="text-emerald-400 font-semibold"
+                  <code class="text-emerald-400"
+                    >00000000000000000000<span
+                      class="bg-amber-400 text-gray-900"
+                      >1000</span
+                    >0000<span class="bg-blue-400 text-gray-900"
                       >1000</span
                     ></code
                   >
@@ -432,13 +429,11 @@ function rankPokerHand(cs, ss) {
               <tr>
                 <td>5♠</td>
                 <td>
-                  <code
-                    >000000000000000000000000<span
-                      class="bg-amber-400 text-gray-900 font-semibold"
+                  <code class="text-emerald-400"
+                    >00000000000000000000000000<span
+                      class="bg-amber-400 text-gray-900"
                       >0010</span
-                    ><span class="text-emerald-400 font-semibold"
-                      >0001</span
-                    ></code
+                    ><span class="bg-blue-400 text-gray-900">0001</span></code
                   >
                 </td>
                 <td>
@@ -451,13 +446,11 @@ function rankPokerHand(cs, ss) {
               <tr>
                 <td>4♣</td>
                 <td>
-                  <code
-                    >000000000000000000000000<span
-                      class="bg-amber-400 text-gray-900 font-semibold"
+                  <code class="text-emerald-400"
+                    >00000000000000000000000000<span
+                      class="bg-amber-400 text-gray-900"
                       >0001</span
-                    ><span class="text-emerald-400 font-semibold"
-                      >0010</span
-                    ></code
+                    ><span class="bg-blue-400 text-gray-900">0010</span></code
                   >
                 </td>
                 <td>
@@ -470,42 +463,45 @@ function rankPokerHand(cs, ss) {
               <tr>
                 <td>3♥</td>
                 <td>
-                  <code
-                    >000000000000000000000000<span
-                      class="bg-amber-400 text-gray-900 font-semibold"
+                  <code class="text-emerald-400"
+                    >00000000000000000000000000<span
+                      class="bg-amber-400 text-gray-900"
                       >0000</span
-                    ><span class="text-emerald-400 font-semibold"
-                      >0100</span
-                    ></code
+                    ><span class="bg-blue-400 text-gray-900">0100</span></code
                   >
                 </td>
                 <td>
-                  The Three of Hearts sets two bits: Bit 3 (0000 1000) for the
-                  Three rank and Bit 2 (0100) for the Hearts suit. The rank bit
-                  is now closer to the suit bits as we move to lower values.
+                  The Three of Hearts sets two bits: Bit 3 for the Three rank
+                  and Bit 2 (0100) for the Hearts suit. The rank bit is now
+                  closer to the suit bits as we move to lower values.
                 </td>
               </tr>
               <tr>
                 <td>2♦</td>
                 <td>
-                  <code
-                    >000000000000000000000000<span
-                      class="bg-amber-400 text-gray-900 font-semibold"
+                  <code class="text-emerald-400"
+                    >00000000000000000000000000<span
+                      class="bg-amber-400 text-gray-900"
                       >0000</span
-                    ><span class="text-emerald-400 font-semibold"
-                      >1000</span
-                    ></code
+                    ><span class="bg-blue-400 text-gray-900">1000</span></code
                   >
                 </td>
                 <td>
-                  The Two of Diamonds sets two bits: Bit 2 (0000 0100) for the
-                  Two rank and Bit 3 (1000) for the Diamonds suit. This is the
-                  lowest rank, using bit position 2, while still maintaining the
-                  same suit bit pattern.
+                  The Two of Diamonds sets two bits: Bit 2 for the Two rank and
+                  Bit 3 (1000) for the Diamonds suit. This is the lowest rank,
+                  using bit position 2, while still maintaining the same suit
+                  bit pattern.
                 </td>
               </tr>
             </tbody>
           </table>
+        </div>
+      </section>
+
+      <section class="content-section">
+        <h2>Bit Reference Tables</h2>
+        <div class="tab-container">
+          <!-- Tables will be dynamically generated here -->
         </div>
       </section>
 
