fix: styling / README

--- a/index.html
+++ b/index.html
@@ -353,7 +353,12 @@ function rankPokerHand(cs, ss) {
             </thead>
             <tbody>
               <tr>
-                <td>A♠</td>
+                <td>
+                  <span class="table-card"
+                    ><span class="rank">A</span
+                    ><span class="suit">♠</span></span
+                  >
+                </td>
                 <td>
                   <code class="text-emerald-400"
                     >00000000000000000<span class="bg-amber-400 text-gray-900"
@@ -372,7 +377,12 @@ function rankPokerHand(cs, ss) {
                 </td>
               </tr>
               <tr>
-                <td>K♣</td>
+                <td>
+                  <span class="table-card"
+                    ><span class="rank">K</span
+                    ><span class="suit">♣</span></span
+                  >
+                </td>
                 <td>
                   <code class="text-emerald-400"
                     >00000000000000000<span class="bg-amber-400 text-gray-900"
@@ -390,7 +400,12 @@ function rankPokerHand(cs, ss) {
                 </td>
               </tr>
               <tr>
-                <td>Q♥</td>
+                <td>
+                  <span class="table-card red"
+                    ><span class="rank">Q</span
+                    ><span class="suit">♥</span></span
+                  >
+                </td>
                 <td>
                   <code class="text-emerald-400"
                     >00000000000000000<span class="bg-amber-400 text-gray-900"
@@ -408,7 +423,12 @@ function rankPokerHand(cs, ss) {
                 </td>
               </tr>
               <tr>
-                <td>J♦</td>
+                <td>
+                  <span class="table-card red"
+                    ><span class="rank">J</span
+                    ><span class="suit">♦</span></span
+                  >
+                </td>
                 <td>
                   <code class="text-emerald-400"
                     >00000000000000000000<span
@@ -427,7 +447,12 @@ function rankPokerHand(cs, ss) {
                 </td>
               </tr>
               <tr>
-                <td>5♠</td>
+                <td>
+                  <span class="table-card"
+                    ><span class="rank">5</span
+                    ><span class="suit">♠</span></span
+                  >
+                </td>
                 <td>
                   <code class="text-emerald-400"
                     >00000000000000000000000000<span
@@ -444,7 +469,12 @@ function rankPokerHand(cs, ss) {
                 </td>
               </tr>
               <tr>
-                <td>4♣</td>
+                <td>
+                  <span class="table-card"
+                    ><span class="rank">4</span
+                    ><span class="suit">♣</span></span
+                  >
+                </td>
                 <td>
                   <code class="text-emerald-400"
                     >00000000000000000000000000<span
@@ -461,7 +491,12 @@ function rankPokerHand(cs, ss) {
                 </td>
               </tr>
               <tr>
-                <td>3♥</td>
+                <td>
+                  <span class="table-card red"
+                    ><span class="rank">3</span
+                    ><span class="suit">♥</span></span
+                  >
+                </td>
                 <td>
                   <code class="text-emerald-400"
                     >00000000000000000000000000<span
@@ -477,7 +512,12 @@ function rankPokerHand(cs, ss) {
                 </td>
               </tr>
               <tr>
-                <td>2♦</td>
+                <td>
+                  <span class="table-card red"
+                    ><span class="rank">2</span
+                    ><span class="suit">♦</span></span
+                  >
+                </td>
                 <td>
                   <code class="text-emerald-400"
                     >00000000000000000000000000<span
