deal button jump

--- a/index.html
+++ b/index.html
@@ -743,7 +743,14 @@ function rankPokerHand(cs, ss) {
         </p>
 
         <div class="text-center mb-6">
-          <button id="dealButton" class="deal-button">Deal New Hand</button>
+          <button
+            id="dealButton"
+            class="deal-button"
+            type="button"
+            aria-controls="handDisplay"
+          >
+            Deal New Hand
+          </button>
         </div>
 
         <div
